2022-08-23  jj  <jj@santtu>

	* docker/etool/pcb2gcode.ini (isolation-width): 0.4mm-> 0.38
	(milling-overlap): 13.25%->23%

2022-08-21  jj  <jj@santtu>

	* docker/etool/etool.sh (initApp): silkImage for {B,F}_SilkS,
	{B,F}_Silkscreen, User{1,2}

2022-08-19  jj  <jj@santtu>

	* docker/etool/pcb2gcode.ini (min-milldrill-hole-diameter): enable milldrill

2022-08-11  jj  <jj@santtu>

	* schema/dip/dip.kicad_pcb: fixed edge markers

	* schema/pad2pad/pad2pad.pro (): fixed - did not work

	* docker/etool/pcb2gcode.ini (milldrill options): added

2022-07-04  jj  <jj@santtu>

	* README.org: document 02-silk directory

	* docker/etool/etool.sh (initApp): manage SILK_OUTPUT_DIR

	* docker/etool/RELEASES: producude png into 02-silk files for
	B_SilS and F_SilS

2022-06-27  jj  <jj@santtu>

	* etool.sh (TAG): defaults TAG=7

2022-06-22  jj  <jj@santtu>

	* schema/dip/dip.kicad_pcb: B-version with Fron silk

2022-05-25  jj  <jj@santtu>

	* docker/etool/pcb2gcode.ini (milling-bit examples):

	* docker/etool/etool.sh (usage_example): fixed usasage example

2022-04-12  jj  <jj@santtu>

	* README.org: Feature image added
	architecture diagram show image processing

2022-03-27  jj  <jj@santtu>

	* docker/etool/Dockerfile (ENV TZ): Conda not nededd

	* docker/etool/etool.sh (initApp): conda not needed

2022-03-07  jj  <jj@santtu>

	* docker/etool/etool.sh (initApp): CAM->PROJECT

	* docker/etool/pcb2gcode-control.template: CAM->PROJECT

2022-03-01  jj  <jj@santtu>

	* README.org: ETOOL_DOCKER_TAG="2"

	* docker.org: ETOOL_DOCKER_TAG="2"

2022-02-26  jj  <jj@santtu>

	* docker/etool/etool.sh (initApp): First version
