@@ -1,0 +1,135 @@
+# pcb2gcode.init - etool filetemplate for cam -command
+#
+# Define tooling parameters for pcb2code -tool
+#
+# This file used in cam -command and passed 
+# to pcb2gcode -tool using --config option.
+#
+# For more details ref etool cam-help command
+# and https://github.com/pcb2gcode/pcb2gcode/wiki
+#
+# --------------------
+# One-sided PCBs (traces only on F_Cu or on B_Cu):
+#
+# 1) Normally, for one sided designs, allow pcb2gcode to override PCB
+# positioning given in EDA -tools, and to adjust PCB near to origin
+# using the option 'zero-start=1'
+#
+# 2) If traces are only only on one side, pcb2gcode tool should be
+# able choose drilling/cutting side correctly using options
+# 'drill-side=auto' and 'cut-side=auto'. Check the output of pcb2gcode
+# -tool and adjust, if not correct.
+#
+# --------------------
+# Two-sided PCBs (traces both on F_Cu and B_Cu side)
+#
+# For two sides milling, PCB must be flipped over such that front and
+# back traces are aligned. pcb2gcode uses default line x=0 for
+# flipping. To get correct alignement use two adjustment holes on this
+# flipping line x=0.
+# 
+#
+# 1) EDA design:
+#
+# 1.1) Make PCB board edges symmetrical with origin (x=0,y=0)
+#
+# 1.2) Add two mounting holes for alignement pins on the line x=0
+# (outside board edges).
+#
+# 2) CAM operation:
+#
+# 2.1) the design was already correctly positioned in the EDA tool. Hence,
+# disable option 'zero-start=0'
+#
+# 2.2) For double sided PCBs, pcb2gcode tool should use
+# drilling/cutting side 'front', when options 'drill-side=auto' and
+# 'cut-side=auto'. Observe the output of pcb2gcode -tool, and drill
+# and cut accordingly.
+#
+#
+# ==================================================================
+# Generic options (CLI and config files):
+metric=1
+metricoutput=1
+
+tile-x=1               # number of tiling columns. Default value is 1
+tile-y=1               # number of tiling rows. Default value is 1
+
+# Your PCB might have all the milling and drilling far from the
+# center. For example, there is no milling near (0,0) and all the
+# milling is far away from the origin.
+# By setting zero-start=true, pcb2gcode will move the project so that
+# the drilling and milling is closer to the machine's (0,0):
+zero-start=0           # disable if PCB already positioned in gerber
+
+# CNC options, common to all the milling, drilling, and cutting
+zsafe=2mm              # Z-coordinate for rapid moves
+zchange=15             # tool changing height
+
+# Autolevelling options, for generating gcode to automatically probe
+# the board and adjust milling depth to the actual board height
+
+# ENABLE/DISABLE autoleveling here
+al-front=1             # enable 1, disable 0 z autoleveller front layer
+al-back=1              # enable 1, disable 0 z autoleveller back layer
+
+# other autoleveling options
+software=linuxcnc      # linuxcnc, mach3, mach4 and custom
+al-x=10mm              # max x distance between probes
+al-y=10mm              # max y distance between  probes
+al-probefeed=15mm/min  # speed during the probing
+# al-probe-on arg      # commands to enable probe
+# al-probe-off arg     # command to disable probe
+# al-setzzero arg      # command setting position as zero
+
+# Milling options, for milling traces into the PCB:
+mill-speed=1000        # spindle rpm when milling
+                       # Parameter values for 30deg/0.2 mm v-milling bit
+isolation-width=0.38mm # min width between copper surfaces
+mill-feed=100 mm/min   # feed rate for [mm/m]
+
+# ------------------------------------------------------------------
+# Milling bit configuarations
+#
+# Hacklab milling bit ? 60deg/0.1mm
+# zwork=-0.1mm           # milling depth
+# mill-diameters=0.22mm  # milling cut 
+# milling-overlap=9%     # overlap milling passes, [%/mm]
+
+# https://www.aliexpress.com/item/4000966103866.html XUCHUAN PCB
+# Engraving Bit 3.175mm Shank V Shape Carving Bits 60 Degrees Carbide
+# CNC Router Bit Tipped 0.1 mm 3D Milling Cutter
+zwork=-0.1mm            # milling depth
+mill-diameters=0.2155mm # milling cut
+milling-overlap=60%     # overlap milling passes, [%/mm]
+
+# ------------------------------------------------------------------
+# Drilling options, for making holes in the PCB:
+# drill-side=auto      # front, back, or auto (default)
+
+zdrill=-2.5mm          # drilling depth
+drill-feed=30 mm/min   # drill feed [mm/m]
+drill-speed=2500       # spindle rpm when drilling
+onedrill=1             # use only one drill bit size
+
+# milldrill options:
+milldrill-diameter=2mm #diameter of the end mill used
+min-milldrill-hole-diameter=2.1mm
+                       # minimum hole width or milldrilling.
+                       # Holes smaller than this are drilled
+                       # This implies milldrill
+zmilldrill=-2.5mm    # milldrilling depth 
+# milldrill=1          # [DEPRECATED] Use min-milldrill-hole-diameter=0 instead
+
+
+# ------------------------------------------------------------------
+# Outline options, for cutting the PCB out of the FR4:
+zcut=-1.7mm            # cutting depth
+cutter-diameter=2mm    # diameter of the mill bit
+cut-feed=120 mm/min    # cutting feed
+cut-vertfeed=100mm/min # cutting feed  [mm/m]
+cut-speed=1000         # spindle rpm
+cut-infeed=1mm         # maximum cutting depth
+bridges=1mm            # bridge width
+bridgesnum=4           # number of bridges
+# cut-side=auto        # front, back, or auto
